nomad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nomad-system
spec: {}
status: {}
